--- a/RaoulCore2/ClientApp/src/app/skill/skill.component.css
+++ b/RaoulCore2/ClientApp/src/app/skill/skill.component.css
@@ -1,3 +1,9 @@
+.borderY{
+  border: 1px dotted yellow;
+}
+.borderB{
+  border: 1px dashed blue;
+}
 .skillDiv{
     width: 100%;
     height: 30px;
@@ -14,7 +20,7 @@
 }
 .ratingDiv{
     float: left;
-    width: 80px;
+    width: 150px;
 }
 .infoDiv{
     float: right;
