--- a/RaoulCore2/ClientApp/src/app/inventory/inventory.component.html
+++ b/RaoulCore2/ClientApp/src/app/inventory/inventory.component.html
@@ -4,7 +4,7 @@
   <div class="blockquote text-center">"Learning Angular 8, Bootstap, Azure, and Git the hard way."</div>
 
 
-  <div *ngFor="let data of sections">
+  <div *ngFor="let data of sections" class="row">
 
       <app-skill [data]="data">
       </app-skill>
