--- a/RaoulCore2/ClientApp/src/app/skill/skill.component.html
+++ b/RaoulCore2/ClientApp/src/app/skill/skill.component.html
@@ -1,7 +1,5 @@
-<div class="grid-container">
-
-    <ngb-accordion class="grid-row" #accSkill skillAccordian="ngbAccordion" (click)="allClick()">
-        <ngb-panel class="grid-item">
+    <ngb-accordion class="col" #accSkill skillAccordian="ngbAccordion" (click)="allClick()">
+        <ngb-panel>
 
             <ng-template ngbPanelHeader>
                 <div class="iconDiv"><img style="height: 100%" src="{{this.imagePath}}"></div>
@@ -23,10 +21,8 @@
 
             </ng-template>
 
-            <div class="grid-item">
                 <ng-template ngbPanelContent>
                     <div class="contentDiv">
-
 
                         <div *ngFor="let line of this.lines">
                             {{line}}
@@ -34,8 +30,7 @@
 
                     </div>
                 </ng-template>
-            </div>
+
         </ngb-panel>
 
     </ngb-accordion>
-</div>
