--- a/RaoulCore2/ClientApp/src/styles.css
+++ b/RaoulCore2/ClientApp/src/styles.css
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+.b2{
+    border: 1px dotted yellow
+  }
+  .b1{
+    border: 1px dotted blue
+  }
