--- a/RaoulCore2/ClientApp/src/app/app.component.html
+++ b/RaoulCore2/ClientApp/src/app/app.component.html
@@ -1,9 +1,11 @@
 <div class='container-fluid'>
-  <div class='row'>
-    <div class='col-sm-3'>
-      <app-nav-menu></app-nav-menu>
+  <div class="row">
+    <div class="col-12">
+      <raoul-nav></raoul-nav>
     </div>
-    <div class='col-sm-9 body-content'>
+  </div>
+  <div class="row">
+    <div class="col-12">
       <router-outlet></router-outlet>
     </div>
   </div>
