--- a/RaoulCore2/ClientApp/src/app/skill/skill.component.html
+++ b/RaoulCore2/ClientApp/src/app/skill/skill.component.html
@@ -1,36 +1,28 @@
-    <ngb-accordion class="col" #accSkill skillAccordian="ngbAccordion" (click)="allClick()">
-        <ngb-panel>
+<div ngbPopover="{{lines}}"
+    popoverTitle="{{this.name}}">
 
-            <ng-template ngbPanelHeader>
-                <div class="iconDiv"><img style="height: 100%" src="{{this.imagePath}}"></div>
-                <div class="nameDiv">{{this.name}}</div>
-                <div class="ratingDiv">
-                    <ng-template #stars let-fill="fill">
-                        <span class="star" [class.full]="fill === 100">
-                            <span class="half" [style.width.%]="fill">&#9733;</span>&#9733;
-                        </span>
-                    </ng-template>
-                    <ngb-rating [(rate)]="this.rating" [starTemplate]="stars" [readonly]="true" max="5">
-                    </ngb-rating>
-                </div>
-                <div class="infoDiv">
-                    <!-- <i class="fa fa-2x fa-info"></i> -->
-                    X
-                </div>
+    <div class="iconDiv"><img style="height: 100%" src="{{this.imagePath}}"></div>
+    <div class="nameDiv">{{this.name}}</div>
+    <div class="ratingDiv">
+        <ng-template #stars let-fill="fill">
+            <span class="star" [class.full]="fill === 100">
+                <span class="half" [style.width.%]="fill">&#9733;</span>&#9733;
+            </span>
+        </ng-template>
+        <ngb-rating [(rate)]="this.rating" [starTemplate]="stars" [readonly]="true" max="5">
+        </ngb-rating>
+    </div>
+    <div class="infoDiv">
+        <!-- <i class="fa fa-2x fa-info"></i> -->
+        X
+    </div>
 
+    <!-- <div class="contentDiv">
 
-            </ng-template>
+        <div *ngFor="let line of this.lines">
+            {{line}}
+        </div>
 
-                <ng-template ngbPanelContent>
-                    <div class="contentDiv">
+    </div> -->
 
-                        <div *ngFor="let line of this.lines">
-                            {{line}}
-                        </div>
-
-                    </div>
-                </ng-template>
-
-        </ngb-panel>
-
-    </ngb-accordion>
+</div>
