--- a/RaoulCore2/ClientApp/src/app/inventory/inventory.component.html
+++ b/RaoulCore2/ClientApp/src/app/inventory/inventory.component.html
@@ -1,13 +1,8 @@
 <div class="container" style="width: 100%;">
 
-
   <div class="blockquote text-center">"Learning Angular 8, Bootstap, Azure, and Git the hard way."</div>
 
-
   <div *ngFor="let data of sections" class="row">
-
-      <app-skill [data]="data">
-      </app-skill>
-
+    <app-skill [data]="data"></app-skill>
   </div>
 </div>
