--- a/RaoulCore2/ClientApp/src/app/home/home.component.html
+++ b/RaoulCore2/ClientApp/src/app/home/home.component.html
@@ -1,2 +1,3 @@
 <!-- <app-navbar></app-navbar> -->
-<app-inventory></app-inventory>
+<!-- <app-inventory></app-inventory> -->
+<skill-list></skill-list>
