--- a/RaoulCore2/ClientApp/src/app/raoul-nav/raoul-nav.component.html
+++ b/RaoulCore2/ClientApp/src/app/raoul-nav/raoul-nav.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="#">Raoul's Demo</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" (click)="toggleCollapsed()">
         <span class="navbar-toggler-icon"></span>
@@ -12,17 +12,13 @@
                 </a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" [routerLink]='["/counter"]' (click)='collapse()'>Counter
-                    <span class="sr-only">(current)</span>
-                </a>
-            </li>
-            <li class="nav-item active">
                 <a class="nav-link" [routerLink]='["/fetch-data"]' (click)='collapse()'>Fetch Data
                     <span class="sr-only">(current)</span>
                 </a>
             </li>
-
-
         </ul>
+        <a class="nav-link ml-auto mr-1" [routerLink]='["/about"]' (click)='collapse()'>About
+            <span class="sr-only">(current)</span>
+        </a>
     </div>
 </nav>
