--- a/RaoulCore2/ClientApp/src/app/about/about.component.html
+++ b/RaoulCore2/ClientApp/src/app/about/about.component.html
@@ -2,16 +2,16 @@
 
 This demo was written to gain a more in-depth understanding of the following technologies:
 <ul>
-    <li>Angular 8</li>
-    <li>Microsoft Azure</li>
-    <li>Bootstrap (ng-bootstrap)</li>
-    <li>Responsive Design</li>
+  <li>Angular 8</li>
+  <li>Microsoft Azure</li>
+  <li>Bootstrap (ng-bootstrap)</li>
+  <li>Responsive Design</li>
 </ul>
 <p></p>
-Technology changes every 2-4 years and it's easy to fall behind. 
+Technology changes every 2-4 years and it's easy to fall behind.
 I find the best way to learn new stuff is with a hands-on approach.
 <p></p>
-The source code for this app can be found at www.github.com/whatever.
+The source code for this app can be found at https://github.com/raoulrubin/RaoulCore2
 <p></p>
 I've tried to keep the code reasonably clean, and avoid egregious hacks to make stuff work.
 That said, I'm not a guru at any of these technologies.
