--- a/RaoulCore2/ClientApp/src/app/home/home.component.html
+++ b/RaoulCore2/ClientApp/src/app/home/home.component.html
@@ -1,3 +1,2 @@
-<!-- <app-navbar></app-navbar> -->
-<!-- <app-inventory></app-inventory> -->
+<!-- show list of skills on homepage -->
 <skill-list></skill-list>
