--- a/RaoulCore2/ClientApp/src/app/raoul-nav/raoul-nav.component.html
+++ b/RaoulCore2/ClientApp/src/app/raoul-nav/raoul-nav.component.html
@@ -15,6 +15,11 @@
                 <a class="nav-link" [routerLink]='["/fetch-data"]' (click)='collapse()'>Fetch Data
                     <span class="sr-only">(current)</span>
                 </a>
+            </li>            
+            <li class="nav-item active">
+                <a class="nav-link" [routerLink]='["/weather"]' (click)='collapse()'>Weather
+                    <span class="sr-only">(current)</span>
+                </a>
             </li>
         </ul>
         <a class="nav-link ml-auto mr-1" [routerLink]='["/about"]' (click)='collapse()'>About
