--- a/RaoulCore2/ClientApp/src/app/weather/weather.component.html
+++ b/RaoulCore2/ClientApp/src/app/weather/weather.component.html
@@ -10,8 +10,13 @@
     </div>
 
 <div >
-    <h5>Current Conditions in {{this.weather.where}}</h5>
-    <div style="margin-left: 60px;" >
-        <current-conditions [data]="this.weather"></current-conditions>
+    <hr/>
+     <div  class="outerdiv">
+            <h6>Current Conditions</h6>
+            <div>{{this.weather.location}}</div>
+            <br/>
+            <div class=innerdiv >
+            <current-conditions [data]="this.weather"></current-conditions>
+        </div>
     </div>
  </div>
