more cleanup and reorg

--- a/RaoulCore2/ClientApp/src/app/weather/weather.component.html
+++ b/RaoulCore2/ClientApp/src/app/weather/weather.component.html
@@ -17,3 +17,12 @@
         </div>
     </div>
  </div>
+
+ <div>
+     This page demonstrates an API call to the web server. 
+     The weather forecast is obtained live from OpenWeatherMap.org via a 
+     server-side API request.
+     <p></p>
+     The page also uses the browser based geolocation API to obtain the your
+     current latitude and longitude (requires permission).
+ </div>
